@@ -1,5 +1,11 @@
 2009-03-05  Claudio Saavedra  <csaavedra@igalia.com>
 
+	* src/hildon-time-editor.c
+	(hildon_time_editor_get_time_separators): Do not crash if
+	the first label is NULL.
+
+2009-03-05  Claudio Saavedra  <csaavedra@igalia.com>
+
 	* src/hildon-date-selector.c (_month_days): Check for month to be
 	strictly less than 12, since otherwise we may overrun the array.
 
